--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,11 @@ dependencies:
   local_auth: ^0.6.3+4
   google_fonts:
   sqflite: ^1.3.2+1
-  encrypt: ^4.1.0
+  firebase_auth: ^0.18.4+1
+  cloud_firestore:
+  firebase_core :
+  shared_preferences:
+ 
 
 
 dev_dependencies:
