--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   firebase_core :
   shared_preferences:
   path_provider:
- 
+  flutter_string_encryption: ^0.3.1
 
 
 dev_dependencies:
@@ -55,10 +55,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/screens/download.png
-    - lib/screens/download (1).png
-    - lib/screens/download.png
-    - lib/screens/finger.png
+    - lib/images/download.png
+    - lib/images/download (1).png
+    - lib/images/download.png
+    - lib/images/authentication.png
+    - lib/images/secure_login.png
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
