--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,9 @@ dependencies:
   local_auth: ^0.6.3+4
   google_fonts:
   sqflite: ^1.3.2+1
-  cloud_firestore:
-  firebase_core :
   shared_preferences:
   path_provider:
-  flutter_string_encryption: ^0.3.1
+  xxtea: ^2.0.3
 
 
 dev_dependencies:
